# ai-chatbot

./: .gitignore  OVERVIEW.md  README.md  environment.yml  pyproject.toml  run_ai_gui.bat
config/: default.yaml
config/profiles/: jarvis-en-gpt.yaml  jarvis-nl.yaml  patricia-twitter.yaml  patricia.yaml  patrick.yaml
data/rag/: jarvis-nl_store.jsonl  patricia-en_store.jsonl  patricia-twitter_store.jsonl  patricia_store.jsonl  store.jsonl
src/: main.py
src/bot/: chatbot.py  cli.py  config.py  logger.py  profiles.py  tts_kokoro.py
src/bot/llm/: __init__.py  ollama.py
src/bot/prompt/: system_prompt.txt  system_prompt_jarvis-nl.txt  system_prompt_patricia-twitter.txt  system_prompt_patricia.txt  system_prompt_patrick.txt
src/bot/rag/: retriever.py  store.py  summarizer.py
src/conversation/: state.py  steering.py
src/mail/: __init__.py  admin.py  chat_client.py  config.py  contacts.py  imap_client.py  mail_processor.py  mail_threading.py  models.py  run_mail_loop.py  smtp_client.py  storage.py  templates.py  threading.py
src/mail/data/email/jarvis/: new.jsonl  outbound_log.jsonl  processed.jsonl  whitelist.jsonl
src/server/: api.py  state.py
web/: admin.html  chat.html  index.html  viewer.html
