[project]
name = "ai-chatbot"
version = "0.0.1"
description = "Config-driven local AI chatbot framework (modular, Ollama-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.6",
    "faster-whisper",
    "soundfile",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"bot" = ["prompt/*.txt"]
